--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -77,7 +77,7 @@ li {
 .header {
   width: 100%;
   padding: 0;
-  height: 6.3rem;
+  height: 6.2rem;
   position: fixed;
   top: 0;
   background: #fff;
@@ -108,7 +108,7 @@ li {
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin: 0 0 0 1rem;
+  margin: 0 0 0 1.1rem;
   width: 7.3rem;
 }
 @media screen and (min-width: 768px) {
@@ -130,7 +130,8 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.8rem 0.9rem 0.8rem;
+  padding: 1.3rem 1.2rem 1.7rem;
+  height: 3.1rem;
   border-radius: 1.5rem;
   font-size: 1.2rem;
   color: #fff;
@@ -221,11 +222,12 @@ li {
 -----------------------------------------*/
 .top {
   text-align: center;
-  min-height: 31.8rem;
+  min-height: 31.1rem;
   background-color: #fa7da3;
   color: #fff;
   display: flex;
-  margin-top: 6.3rem;
+  margin-top: 6.2rem;
+  height: 31.1rem;
 }
 @media screen and (min-width: 768px) {
   .top {
@@ -235,55 +237,28 @@ li {
     margin-top: 9.5rem;
   }
 }
-@media screen and (min-width: 768px) and (min-width: 1501px) {
-  .top {
-    background-size: auto;
-    background-position: left bottom;
-    padding-top: 48%;
-    position: relative;
-    height: 0;
-  }
-}
 .top__container {
   background-image: url("/assets/image/top_woman.png");
   background-size: 21rem 22rem;
   background-position: 4% 100%;
+  display: flex;
+  gap: 2rem;
 }
 @media screen and (min-width: 768px) {
   .top__container {
     background-image: url("/assets/image/top_woman.png");
     width: 103rem;
     margin: 0 auto;
-    background-size: auto;
+    background-size: 47%;
     background-position: left bottom;
-    display: flex;
     gap: 2.8rem;
-  }
-}
-@media (min-width: 1501px) {
-  .top__container {
-    background-size: auto;
-    background-position: left bottom;
-    padding-top: 48%;
-    position: relative;
-    height: 0;
   }
 }
 .top__left {
   width: 52%;
 }
-@media screen and (min-width: 768px) and (min-width: 1501px) {
-  .top__left {
-    padding-top: 0px;
-    margin: 0 auto;
-    position: absolute;
-    top: 6%;
-    left: 46%;
-  }
-}
 .top__left--title {
   text-align: center;
-  padding: 0.8rem 1.8rem 0 1.6rem;
   margin: 0 0 1.15rem 0;
 }
 @media screen and (min-width: 768px) {
@@ -291,21 +266,18 @@ li {
     margin: 0 auto;
     max-width: 105.5rem;
     padding: 0;
-  }
-}
-@media screen and (min-width: 768px) and (min-width: 1501px) {
-  .top__left--title {
-    padding-top: 0px;
-    margin: 0 auto;
-    max-width: 106rem;
-    position: absolute;
-    top: 36%;
-    left: 16%;
+    padding: 0.8rem 1.8rem 0 1.6rem;
   }
 }
 .top__left--title-sp {
-  margin: 0 0 0 1.8rem;
+  margin: 1.9rem 0 0 1.8rem;
   min-width: 16.6rem;
+}
+@media screen and (min-width: 768px) {
+  .top__left--title-sp {
+    margin: 0 0 0 1.8rem;
+    width: 50rem;
+  }
 }
 .top__right--upper {
   display: flex;
@@ -334,8 +306,8 @@ li {
   font-size: 1.3rem;
   color: #fa7da3;
   background-color: #fff;
-  margin: 2.2rem 1rem 0.6rem 1rem;
-  padding: 0.5rem 0.8rem;
+  margin: 2.2rem 1rem 0.6rem 2.5rem;
+  padding: 0.4rem 0.5rem;
   font-weight: 700;
 }
 @media screen and (min-width: 768px) {
@@ -346,6 +318,7 @@ li {
 .top__catch-down {
   font-size: 2.4rem;
   font-weight: 700;
+  padding: 0 0 0 1.5rem;
 }
 @media screen and (min-width: 768px) {
   .top__catch-down {
@@ -371,7 +344,7 @@ li {
   }
 }
 .top .small {
-  font-size: 4.6rem;
+  font-size: 3.6rem;
 }
 @media screen and (min-width: 768px) {
   .top .small {
@@ -379,11 +352,12 @@ li {
   }
 }
 .top p {
-  font-size: 1.4rem;
+  font-size: 1rem;
+  letter-spacing: -0.09rem;
   font-family: "Outfit";
-  padding: 1rem 0 1.1rem;
+  padding: 0.5rem 0 2.2rem;
   text-align: end;
-  margin-right: 1rem;
+  margin-right: 2.8rem;
 }
 @media screen and (min-width: 768px) {
   .top p {
@@ -392,7 +366,7 @@ li {
   }
 }
 .top .price-large {
-  font-size: 2rem;
+  font-size: 1.4rem;
 }
 @media screen and (min-width: 768px) {
   .top .price-large {
@@ -405,9 +379,9 @@ li {
 .top li {
   font-size: 1.8rem;
   border: 0.1rem solid #fff;
-  margin: 0 0 1.9rem 0;
-  padding: 1rem 0.8rem;
-  min-width: 13.3rem;
+  margin: 0 auto 1.2rem;
+  padding: 0.6rem 0.8rem;
+  width: 13.3rem;
 }
 @media screen and (min-width: 768px) {
   .top li {
@@ -422,14 +396,14 @@ li {
 ---------------------------------------- */
 .give {
   background-color: #fffedd;
-  padding: 3rem 2rem 3.2rem;
+  padding: 2.2rem 2rem 1.1rem;
 }
 .give__catch {
   position: relative;
   text-align: center;
   font-size: 2.1rem;
   color: #fa7da3;
-  padding: 0 0 0.4rem 0;
+  padding: 0 0 1.4rem 0;
 }
 @media screen and (min-width: 768px) {
   .give__catch {
@@ -439,8 +413,8 @@ li {
 }
 .give__catch::before, .give__catch::after {
   position: absolute;
-  top: 45%;
-  width: 2.1rem;
+  top: 35%;
+  width: 2.8rem;
   height: 0.14rem;
   content: "";
   background-color: #fa7da3;
@@ -452,8 +426,8 @@ li {
   }
 }
 .give__catch::before {
-  right: calc(50% + 3.8rem);
-  transform: rotate(63deg);
+  right: calc(50% + 3.4rem);
+  transform: rotate(59deg);
 }
 @media screen and (min-width: 768px) {
   .give__catch::before {
@@ -484,7 +458,7 @@ li {
   background-color: #fa7da3;
   font-size: 2.1rem;
   color: #fff;
-  padding: 0.8rem 0;
+  padding: 0.2rem 0;
 }
 @media screen and (min-width: 768px) {
   .give .give__item--title {
@@ -496,7 +470,7 @@ li {
   border-radius: 0 0 1rem 1rem;
   background-color: #fff;
   border: 0.1rem solid #fa7da3;
-  padding: 0.8rem 0;
+  padding: 0.5rem 0 0.5rem 1.3rem;
 }
 @media screen and (min-width: 768px) {
   .give .give__item--info {
@@ -513,7 +487,8 @@ li {
   }
 }
 .give .give__item .small {
-  font-size: 3.1rem;
+  font-size: 2.8rem;
+  letter-spacing: -0.05rem;
 }
 @media screen and (min-width: 768px) {
   .give .give__item .small {
@@ -535,7 +510,7 @@ li {
 /* contact
 ---------------------------------------- */
 .contact {
-  padding: 4.8rem 2rem 1rem;
+  padding: 2.3rem 2rem 1rem;
 }
 @media screen and (min-width: 768px) {
   .contact {
@@ -555,6 +530,11 @@ li {
 .contact_03 {
   padding: 2rem 2rem 4rem;
 }
+@media screen and (min-width: 768px) {
+  .contact_03 {
+    padding: 5rem 2rem 6rem;
+  }
+}
 .contact__container {
   text-align: center;
 }
@@ -568,7 +548,8 @@ li {
   font-size: 2.1rem;
   color: #fa7da3;
   font-weight: 700;
-  padding: 0 0 1.2rem 0;
+  padding: 0 0 1.2rem 1.1rem;
+  letter-spacing: 0.2rem;
 }
 @media screen and (min-width: 768px) {
   .contact__title {
@@ -581,7 +562,7 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem 4.8rem 1rem 5.1rem;
+  padding: 1rem 3.4rem 1.2rem 7rem;
   letter-spacing: 0.2rem;
   border-radius: 4rem;
   font-size: 2.1rem;
@@ -617,7 +598,7 @@ li {
   display: flex;
   align-items: center;
   background-size: contain;
-  margin: 0.2rem 0 0 1.3rem;
+  margin: 0.2rem 0 0 2.3rem;
 }
 @media screen and (min-width: 768px) {
   .contact .btn__form-02::after {
@@ -631,7 +612,7 @@ li {
 /* free
 ---------------------------------------- */
 .free {
-  padding: 0.8rem 2rem 3rem;
+  padding: 0.8rem 2rem 4rem;
 }
 @media screen and (min-width: 768px) {
   .free {
@@ -645,8 +626,8 @@ li {
   color: #50bfff;
   font-weight: 700;
   letter-spacing: 0.2rem;
-  margin: 1.3rem 0 2rem;
-  padding: 1rem 0;
+  margin: 1.3rem 0 1.2rem;
+  padding: 0.8rem 0 0.9rem;
   border-top: 0.1rem solid #50bfff;
   border-bottom: 0.1rem solid #50bfff;
   text-align: center;
@@ -672,7 +653,7 @@ li {
   }
 }
 .free__item--info-01 {
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.8rem;
 }
 @media screen and (min-width: 768px) {
   .free__item--info-01 {
@@ -691,7 +672,7 @@ li {
 /* point
 ---------------------------------------- */
 .point {
-  padding: 5rem 1.6rem 0;
+  padding: 3.6rem 1.6rem 0;
   margin: 0 auto;
   max-width: 102.4rem;
   background-color: #fdf0f5;
@@ -718,13 +699,16 @@ li {
   color: #4d2b1b;
   font-weight: 500;
   text-align: center;
-  letter-spacing: 0.15rem;
+  letter-spacing: 0.01rem;
+}
+.point__logo img {
+  margin-left: 0.3rem;
 }
 .point__second--main {
   font-size: 3.2rem;
   font-weight: 700;
   color: #fa7da3;
-  padding: 2.1rem 0 2.9rem 0;
+  padding: 1.4rem 0 2.5rem 0;
   text-align: center;
   letter-spacing: 0.1rem;
   position: relative;
@@ -782,7 +766,7 @@ li {
   background-color: #fa7da3;
   font-size: 1.8rem;
   color: #fff;
-  padding: 1.3rem 0;
+  padding: 1.3rem 0 1rem;
   display: flex;
   justify-content: center;
 }
@@ -794,7 +778,7 @@ li {
   }
 }
 .point__item_01 {
-  padding-right: 1rem;
+  padding-right: 1.2rem;
 }
 @media screen and (min-width: 768px) {
   .point__item_01 {
@@ -803,7 +787,7 @@ li {
 }
 .point__item_02 {
   border-left: 0.1rem solid #fff;
-  padding-left: 1rem;
+  padding-left: 1.3rem;
 }
 @media screen and (min-width: 768px) {
   .point__item_02 {
@@ -814,7 +798,8 @@ li {
   border-radius: 0 0 1rem 1rem;
   background-color: #fff;
   border: 0.1rem solid #fa7da3;
-  padding: 1.3rem 1.3rem 2rem;
+  padding: 1.3rem 2rem 2rem;
+  letter-spacing: -0.06rem;
 }
 .point__info--catch {
   font-size: 1.4rem;
@@ -842,6 +827,16 @@ li {
     gap: 3rem;
   }
 }
+.point__place {
+  width: 14.3rem;
+  height: 8.5rem;
+}
+@media screen and (min-width: 768px) {
+  .point__place {
+    width: 23.2rem;
+    height: 13.7rem;
+  }
+}
 @media screen and (min-width: 768px) {
   .point__place img {
     width: 130%;
@@ -855,7 +850,7 @@ li {
 }
 @media screen and (min-width: 768px) {
   .point__place_01 {
-    padding: 3.7rem 7rem 3.7rem 6rem;
+    padding: 3.7rem 8rem 3.7rem 6rem;
   }
 }
 .point__place_02 {
@@ -1119,7 +1114,12 @@ li {
 ---------------------------------------- */
 .voice {
   background-color: #fdf0f5;
-  --swiper-pagination-bullet-inactive-opacity: 1;
+}
+@media screen and (min-width: 768px) {
+  .voice__content {
+    margin: 0 auto;
+    max-width: 102.4rem;
+  }
 }
 .voice__main {
   font-size: 3.2rem;
@@ -1148,7 +1148,7 @@ li {
 }
 @media screen and (min-width: 768px) {
   .voice__main::before {
-    left: 55rem;
+    left: 34rem;
     top: 29%;
   }
 }
@@ -1164,7 +1164,7 @@ li {
 }
 @media screen and (min-width: 768px) {
   .voice__main::after {
-    right: 55rem;
+    right: 34rem;
     top: 29%;
   }
 }
@@ -1231,7 +1231,7 @@ li {
   .voice .swiper__container {
     max-width: 103rem;
     margin-inline: auto;
-    padding: 0 0 10rem 0;
+    padding: 0 0 5rem 0;
   }
 }
 .voice .swiper {
@@ -1241,8 +1241,8 @@ li {
 }
 @media screen and (min-width: 768px) {
   .voice .swiper {
-    padding: 0;
     max-width: 95rem;
+    padding: 0 0 1.8rem 0;
   }
 }
 .voice .swiper-slide {
@@ -1280,6 +1280,8 @@ li {
     bottom: 1%;
     width: 15px;
     height: 15px;
+    position: relative;
+    left: 50%;
   }
 }
 .voice .swiper-pagination-bullet {
@@ -1297,6 +1299,11 @@ li {
   background-color: #fa7da3;
   width: 1.5rem;
   height: 1.5rem;
+}
+@media screen and (min-width: 768px) {
+  .voice .swiper-pagination-lock {
+    display: unset;
+  }
 }
 
 /* footer
@@ -1317,8 +1324,8 @@ li {
 }
 @media screen and (min-width: 768px) {
   .footer__img {
-    width: 19.5rem;
-    margin: unset;
+    width: 14.4rem;
+    margin: 0 auto;
     padding: 0;
   }
 }
