--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -254,8 +254,8 @@ li {
 
     &__container {
         background-image: url("/assets/image/top_woman.png");
-        background-size: 21rem 22rem;
-        background-position: 4% 100%;
+        background-size: 21rem 21.5rem;
+        background-position: 2% 100%;
         display: flex;
         gap: 2rem;
 
@@ -368,7 +368,7 @@ li {
         font-size: 1rem;
         letter-spacing: -0.09rem;
         font-family: "Outfit";
-        padding: 0.5rem 0 2.2rem;
+        padding: 0.6rem 0 2.2rem;
         text-align: end;
         margin-right: 2.8rem;
 
@@ -423,7 +423,7 @@ li {
         &::before,
         &::after {
             position: absolute;
-            top: 35%;
+            top: 40%;
             width: 2.8rem;
             height: 0.14rem;
             content: "";
@@ -444,7 +444,7 @@ li {
         }
         &::after {
             left: calc(50% + 3.5rem);
-            transform: rotate(-63deg);
+            transform: rotate(-60deg);
 
             @include pc {
               left: calc(50% + 5.3rem);
@@ -465,7 +465,7 @@ li {
             background-color: #fa7da3;
             font-size: 2.1rem;
             color: #fff;
-            padding: 0.2rem 0;
+            padding: 0.2rem 0 0.3rem;
 
             @include pc {
                 font-size: 3.2rem;
@@ -502,7 +502,7 @@ li {
 
     p {
         font-size: 1rem;
-        padding: 1rem 0 0 0;
+        padding: 1rem 0.3rem 0 0;
         text-align: center;
 
         @include pc {
@@ -719,7 +719,7 @@ li {
         }
         &::before {
             content: "";
-            background-image: url(/assets/image/star.png);
+            background-image: url(/assets/image/star.svg);
             width: 5.7rem;
             height: 5.6rem;
             display: inline-block;
@@ -733,7 +733,7 @@ li {
         }
         &::after {
             content: "";
-            background-image: url(/assets/image/star_right.png);
+            background-image: url(/assets/image/star_right.svg);
             width: 5.7rem;
             height: 5.6rem;
             display: inline-block;
@@ -791,15 +791,15 @@ li {
             border-radius: 0 0 1rem 1rem;
             background-color: #fff;
             border: 0.1rem solid #fa7da3;
-            padding: 1.3rem 2rem 2rem;
+            padding: 1.3rem 1.9rem 2rem 2rem;
             letter-spacing: -0.06rem;
         }
     }
     &__info--catch {
         font-size: 1.4rem;
-        line-height: calc(21 / 14);
+        line-height: 1.6;
         text-align: left;
-        padding: 0 0 1.5rem 0;
+        padding: 0 0 1.2rem 0;
 
         @include pc {
             font-size: 2.1rem;
@@ -837,7 +837,7 @@ li {
     &__place_01 {
         background-color: #fff;
         border: 1px solid #fa7da3;
-        padding: 23% 4rem;
+        padding: 14% 3rem;
 
         @include pc {
             padding: 3.7rem 8rem 3.7rem 6rem;
@@ -846,7 +846,7 @@ li {
     &__place_02 {
         background-color: #fdf0f5;
         border: 1px solid #666666;
-        padding: 20% 3.2rem;
+        padding: 20% 3.2rem 20% 3.5rem;
         font-size: 1.8rem;
         letter-spacing: 0.2rem;
         color: #433e3f;
@@ -860,7 +860,8 @@ li {
     }
     &__note {
         font-size: 1.4rem;
-        padding: 1rem 0 0 0;
+        padding: 0.6rem 0 0 0;
+        letter-spacing: 0.01rem;
 
         @include pc {
             font-size: 2.1rem;
@@ -871,7 +872,7 @@ li {
 /* -------- point02 -------- */
 
     &__item--info_02 {
-        padding: 1.3rem 1.5rem 2rem;
+        padding: 1.7rem 1.8rem 2rem 2rem;
         font-size: 1.4rem;
         text-align: left;
 
@@ -880,7 +881,9 @@ li {
         }
     }
     &__info--catch_02 {
-        padding: 0 0 0.5rem 0;
+        padding: 0 0 0.4rem 0;
+        line-height: 1.4;
+        letter-spacing: 0.01rem;
 
         @include pc {
             font-size: 2.1rem;
@@ -903,7 +906,7 @@ li {
         color: #4d2c1c;
         font-size: 2.3rem;
         font-weight: 700;
-        padding: 3.3rem 0 1.9rem 0;
+        padding: 4.6rem 0 1.9rem 0;
         text-align: center;
 
         @include pc {
@@ -1007,7 +1010,7 @@ li {
         }
         &::before {
             content: "";
-            background-image: url(/assets/image/star.png);
+            background-image: url(/assets/image/star.svg);
             width: 5.7rem;
             height: 5.6rem;
             display: inline-block;
@@ -1022,7 +1025,7 @@ li {
         }
         &::after {
             content: "";
-            background-image: url(/assets/image/star_right.png);
+            background-image: url(/assets/image/star_right.svg);
             width: 5.7rem;
             height: 5.6rem;
             display: inline-block;
@@ -1125,7 +1128,7 @@ li {
         }
         &::before {
             content: "";
-            background-image: url(/assets/image/star.png);
+            background-image: url(/assets/image/star.svg);
             width: 5.7rem;
             height: 5.6rem;
             display: inline-block;
@@ -1140,7 +1143,7 @@ li {
         }
         &::after {
             content: "";
-            background-image: url(/assets/image/star_right.png);
+            background-image: url(/assets/image/star_right.svg);
             width: 5.7rem;
             height: 5.6rem;
             display: inline-block;
