--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -563,7 +563,7 @@ li {
 }
 @media screen and (min-width: 768px) {
   .contact_02 {
-    padding: 6rem 2rem 4rem;
+    padding: 5.8rem 2rem 4rem;
   }
 }
 .contact_03 {
@@ -571,7 +571,7 @@ li {
 }
 @media screen and (min-width: 768px) {
   .contact_03 {
-    padding: 5rem 2rem 6rem;
+    padding: 5.8rem 2rem 4rem;
   }
 }
 .contact__container {
@@ -728,7 +728,7 @@ li {
 }
 @media screen and (min-width: 768px) {
   .point {
-    padding: 5.2rem 1.6rem 2rem;
+    padding: 5.2rem 1.6rem 1rem;
     max-width: unset;
   }
 }
@@ -850,6 +850,11 @@ li {
 }
 @media screen and (min-width: 768px) {
   .point__item--title_02 {
+    padding: 2rem 0 2.1rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .point__item--title_03 {
     padding: 2rem 0 2.1rem;
   }
 }
@@ -1075,7 +1080,7 @@ li {
 @media screen and (min-width: 768px) {
   .point__item--info_03 {
     font-size: 2.1rem;
-    padding: 3.1rem 5.5rem 3rem;
+    padding: 2.3rem 4rem 3.3rem;
   }
 }
 .point__info--catch_03 {
@@ -1091,7 +1096,7 @@ li {
 }
 @media screen and (min-width: 768px) {
   .course {
-    padding: 2rem 1.6rem 2rem;
+    padding: 1.8rem 1.6rem 6rem;
   }
 }
 .course__title {
@@ -1134,8 +1139,10 @@ li {
 }
 @media screen and (min-width: 768px) {
   .course__main::before {
-    left: 31rem;
-    top: 8%;
+    left: 32rem;
+    top: 0.9rem;
+    width: 5.5rem;
+    height: 5.9rem;
   }
 }
 .course__main::after {
@@ -1152,7 +1159,9 @@ li {
 @media screen and (min-width: 768px) {
   .course__main::after {
     right: 31rem;
-    top: 8%;
+    top: 0.9rem;
+    width: 5.5rem;
+    height: 5.9rem;
   }
 }
 .course__box {
@@ -1161,8 +1170,9 @@ li {
 @media screen and (min-width: 768px) {
   .course__box {
     display: flex;
-    gap: 3rem;
     justify-content: center;
+    gap: 3.2rem;
+    margin: 0 1rem 0 0;
   }
 }
 .course__item {
@@ -1171,8 +1181,13 @@ li {
   max-width: 35rem;
   margin: 0 0 3.1rem 0;
 }
+@media screen and (min-width: 768px) {
+  .course__item {
+    margin: 0;
+  }
+}
 .course__item:nth-child(2) {
-  margin: 0;
+  width: 35rem;
 }
 .course__item--title {
   border-radius: 1rem 1rem 0 0;
@@ -1189,6 +1204,7 @@ li {
 @media screen and (min-width: 768px) {
   .course__item--title {
     font-size: 2.8rem;
+    letter-spacing: 0.07rem;
   }
 }
 .course__item--info {
@@ -1201,9 +1217,18 @@ li {
   letter-spacing: 0.01rem;
 }
 @media screen and (min-width: 768px) {
-  .course__item--info_02 {
-    padding: 1.3rem 1.2rem 2rem;
+  .course__item--info {
+    padding: 1rem 1.8rem 2.5rem 2rem;
+    letter-spacing: 0.03rem;
   }
+}
+@media screen and (min-width: 768px) {
+  .course__item--info_02 {
+    padding: 1rem 1rem 2.5rem 2rem;
+  }
+}
+.course .no-sp {
+  display: unset;
 }
 .course__info--catch {
   font-size: 1.4rem;
@@ -1233,6 +1258,11 @@ li {
   padding: 1rem 0 0.5rem;
 }
 @media screen and (min-width: 768px) {
+  .voice {
+    padding: 0.5rem 0 0.5rem;
+  }
+}
+@media screen and (min-width: 768px) {
   .voice__content {
     margin: 0 auto;
     max-width: 102.4rem;
@@ -1250,7 +1280,7 @@ li {
 @media screen and (min-width: 768px) {
   .voice__main {
     font-size: 4.2rem;
-    padding: 4.3rem 0 2.2rem 0;
+    padding: 4.3rem 0 3.8rem 0;
   }
 }
 .voice__main::before {
@@ -1266,8 +1296,10 @@ li {
 }
 @media screen and (min-width: 768px) {
   .voice__main::before {
-    left: 34rem;
-    top: 29%;
+    left: 33.5rem;
+    top: 4rem;
+    width: 5.7rem;
+    height: 5.6rem;
   }
 }
 .voice__main::after {
@@ -1283,8 +1315,10 @@ li {
 }
 @media screen and (min-width: 768px) {
   .voice__main::after {
-    right: 34rem;
-    top: 29%;
+    right: 32.5rem;
+    top: 4rem;
+    width: 5.7rem;
+    height: 5.6rem;
   }
 }
 .voice__item {
@@ -1308,6 +1342,11 @@ li {
   display: flex;
   justify-content: center;
 }
+@media screen and (min-width: 768px) {
+  .voice__title {
+    padding: 1.3rem 0 1.2rem;
+  }
+}
 .voice__down {
   background-color: #fff;
   display: flex;
@@ -1318,13 +1357,20 @@ li {
 }
 @media screen and (min-width: 768px) {
   .voice__down {
-    padding: 1rem 2.2rem 1.5rem 1.8rem;
-    gap: 1.3rem;
+    padding: 1.3rem 2.2rem 1.3rem 2.4rem;
+    gap: 2rem;
   }
 }
 @media screen and (min-width: 768px) {
   .voice__down_02 {
-    padding: 1rem 1.2rem 1.5rem 0.5rem;
+    padding: 1.3rem 1.2rem 1.3rem 1.1rem;
+    gap: 0.6rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .voice__down_03 {
+    padding: 1.2rem 1.2rem 1.4rem 2rem;
+    gap: 1.5rem;
   }
 }
 .voice__down--right {
@@ -1353,18 +1399,18 @@ li {
   }
 }
 .voice .swiper {
-  padding: 0.8rem 3.9rem 0.5rem;
+  padding: 0.8rem 3.8rem 0.5rem 4.2rem;
   margin: 0 auto;
   position: relative;
 }
 @media screen and (min-width: 768px) {
   .voice .swiper {
-    max-width: 95rem;
+    max-width: 97rem;
     padding: 0 0 1.8rem 0;
   }
 }
 .voice .swiper-slide {
-  width: 31.6rem;
+  width: 31rem;
 }
 .voice__name {
   font-size: 1.6rem;
@@ -1374,7 +1420,7 @@ li {
 }
 @media screen and (min-width: 768px) {
   .voice__name {
-    padding: 1rem 0 1rem;
+    padding: 0.5rem 0 0.8rem;
   }
 }
 .voice__note {
@@ -1384,7 +1430,7 @@ li {
 @media screen and (min-width: 768px) {
   .voice__note {
     font-size: 1.4rem;
-    line-height: 1.7142857143;
+    line-height: 1.5;
   }
 }
 .voice .swiper-pagination {
@@ -1393,6 +1439,7 @@ li {
 }
 @media screen and (min-width: 768px) {
   .voice .swiper-pagination {
+    display: none;
     --swiper-pagination-color: #fa7da3;
     --swiper-pagination-bullet-inactive-color: #ffd2d2;
     bottom: 1%;
@@ -1407,6 +1454,7 @@ li {
   bottom: -1%;
   width: 1.5rem;
   height: 1.5rem;
+  opacity: 1;
   --swiper-pagination-bullet-horizontal-gap: 0.8rem;
 }
 @media screen and (min-width: 768px) {
