--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -561,14 +561,14 @@ li {
         padding: 2.7rem 2rem 2rem;
 
         @include pc {
-            padding: 6rem 2rem 4rem;
+            padding: 5.8rem 2rem 4rem;
         }
     }
     &_03 {
         padding: 2.9rem 2rem 4.4rem;
 
         @include pc {
-            padding: 5rem 2rem 6rem;
+            padding: 5.8rem 2rem 4rem;
         }
     }
     &__container {
@@ -724,7 +724,7 @@ li {
     background-color: #fdf0f5;
 
     @include pc {
-        padding: 5.2rem 1.6rem 2rem;
+        padding: 5.2rem 1.6rem 1rem;
         max-width: unset;
     }
     &__container {
@@ -837,6 +837,11 @@ li {
             }
 
             &_02 {
+                @include pc {
+                    padding: 2rem 0 2.1rem;
+                }
+            }
+            &_03 {
                 @include pc {
                     padding: 2rem 0 2.1rem;
                 }
@@ -1054,7 +1059,7 @@ li {
 
         @include pc {
             font-size: 2.1rem;
-            padding: 3.1rem 5.5rem 3rem;
+            padding: 2.3rem 4rem 3.3rem;
         }
     }
     &__info--catch_03 {
@@ -1076,7 +1081,7 @@ li {
     max-width: 102.4rem;
 
     @include pc {
-        padding: 2rem 1.6rem 2rem;
+        padding: 1.8rem 1.6rem 6rem;
     }
 
     &__title {
@@ -1115,8 +1120,10 @@ li {
             top: 0.8rem;
 
             @include pc {
-                left: 31rem;
-                top: 8%;
+                left: 32rem;
+                top: 0.9rem;
+                width: 5.5rem;
+                height: 5.9rem;
             }
         }
         &::after {
@@ -1132,7 +1139,9 @@ li {
 
             @include pc {
                 right: 31rem;
-                top: 8%;
+                top: 0.9rem;
+                width: 5.5rem;
+                height: 5.9rem;
             }
         }
     }
@@ -1141,8 +1150,9 @@ li {
 
         @include pc {
             display: flex;
-            gap: 3rem;
             justify-content: center;
+            gap: 3.2rem;
+            margin: 0 1rem 0 0;
         }
     }
     &__item {
@@ -1151,8 +1161,13 @@ li {
         max-width: 35rem;
         margin: 0 0 3.1rem 0;
 
-        &:nth-child(2) {
+        @include pc {
             margin: 0;
+        }
+
+        &:nth-child(2) {
+
+            width: 35rem;
         }
 
         &--title {
@@ -1169,6 +1184,7 @@ li {
 
             @include pc {
                 font-size: 2.8rem;
+                letter-spacing: 0.07rem;
             }
         }
         &--info {
@@ -1179,11 +1195,23 @@ li {
             border-left: 0.1rem solid #fa7da3;
             padding: 1.2rem 1.8rem 2.6rem 2rem;
             letter-spacing: 0.01rem;
+
+            @include pc {
+                padding: 1rem 1.8rem 2.5rem 2rem;
+                letter-spacing: 0.03rem;
+            }
         }
         &--info_02 {
             @include pc {
-                padding: 1.3rem 1.2rem 2rem;
+                padding: 1rem 1rem 2.5rem 2rem;
             }
+        }
+    }
+    .no-sp {
+        display: unset;
+
+        @include pc {
+
         }
     }
     &__info--catch {
@@ -1212,6 +1240,10 @@ li {
     background-color: #fdf0f5;
     padding: 1rem 0 0.5rem;
 
+    @include pc {
+        padding: 0.5rem 0 0.5rem;
+    }
+
     &__content {
         @include pc {
             margin: 0 auto;
@@ -1229,7 +1261,7 @@ li {
 
         @include pc {
             font-size: 4.2rem;
-            padding: 4.3rem 0 2.2rem 0;
+            padding: 4.3rem 0 3.8rem 0;
         }
         &::before {
             content: "";
@@ -1243,8 +1275,10 @@ li {
             top: 1.8rem;
 
             @include pc {
-                left: 34rem;
-                top: 29%;
+                left: 33.5rem;
+                top: 4rem;
+                width: 5.7rem;
+                height: 5.6rem;
             }
         }
         &::after {
@@ -1259,8 +1293,10 @@ li {
             top: 1.8rem;
 
             @include pc {
-                right: 34rem;
-                top: 29%;
+                right: 32.5rem;
+                top: 4rem;
+                width: 5.7rem;
+                height: 5.6rem;
             }
         }
     }
@@ -1283,6 +1319,10 @@ li {
         padding: 1.3rem 0 1.2rem;
         display: flex;
         justify-content: center;
+
+        @include pc {
+            padding: 1.3rem 0 1.2rem;
+        }
     }
     &__down {
         background-color: #fff;
@@ -1293,13 +1333,20 @@ li {
         gap: 1rem;
 
         @include pc {
-            padding: 1rem 2.2rem 1.5rem 1.8rem;
-            gap: 1.3rem;
+            padding: 1.3rem 2.2rem 1.3rem 2.4rem;
+            gap: 2rem;
         }
     }
     &__down_02 {
         @include pc {
-            padding: 1rem 1.2rem 1.5rem 0.5rem;
+            padding: 1.3rem 1.2rem 1.3rem 1.1rem;
+            gap: 0.6rem;
+        }
+    }
+    &__down_03 {
+        @include pc {
+            padding: 1.2rem 1.2rem 1.4rem 2rem;
+            gap: 1.5rem;
         }
     }
     &__down--right {
@@ -1326,17 +1373,17 @@ li {
         }
     }
     .swiper {
-        padding: 0.8rem 3.9rem 0.5rem;
+        padding: 0.8rem 3.8rem 0.5rem 4.2rem;
         margin: 0 auto;
         position: relative;
 
         @include pc {
-            max-width: 95rem;
+            max-width: 97rem;
             padding: 0 0 1.8rem 0;
         }
 
         &-slide {
-            width: 31.6rem;
+            width: 31rem;
 
             @include pc {
 
@@ -1350,7 +1397,7 @@ li {
         letter-spacing: 0.03rem;
 
         @include pc {
-            padding: 1rem 0 1rem;
+            padding: 0.5rem 0 0.8rem;
         }
     }
     &__note {
@@ -1359,7 +1406,7 @@ li {
 
         @include pc {
             font-size: 1.4rem;
-            line-height: calc(24 / 14);
+            line-height: 1.5;
         }
     }
     .swiper-pagination {
@@ -1367,6 +1414,7 @@ li {
         padding: 0 0 1rem 0;
 
         @include pc {
+            display: none;
             --swiper-pagination-color: #fa7da3;;
             --swiper-pagination-bullet-inactive-color: #ffd2d2;
             bottom: 1%;
@@ -1382,6 +1430,7 @@ li {
         bottom: -1%;
         width: 1.5rem;
         height: 1.5rem;
+        opacity: 1;
         --swiper-pagination-bullet-horizontal-gap: 0.8rem;
 
         @include pc {
