--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -237,13 +237,11 @@ li {
   min-height: 31.1rem;
   background-color: #fa7da3;
   color: #fff;
-  display: flex;
   margin-top: 6.2rem;
   height: 31.1rem;
 }
 @media screen and (min-width: 768px) {
   .top {
-    height: auto;
     width: 100%;
     min-height: 61.2rem;
     margin-top: 9.5rem;
@@ -254,7 +252,7 @@ li {
   background-size: 21rem 21.5rem;
   background-position: 2% 100%;
   display: flex;
-  gap: 2rem;
+  height: 100%;
 }
 @media screen and (min-width: 768px) {
   .top__container {
@@ -282,7 +280,7 @@ li {
   }
 }
 .top__left--title-sp {
-  margin: 1.9rem 0 0 1.8rem;
+  margin: 2.1rem 0 0 0.1rem;
   min-width: 16.6rem;
 }
 @media screen and (min-width: 768px) {
@@ -318,7 +316,7 @@ li {
   font-size: 1.3rem;
   color: #fa7da3;
   background-color: #fff;
-  margin: 2.2rem 1rem 0.6rem 2.5rem;
+  margin: 2.3rem 1rem 0.6rem 2.6rem;
   padding: 0.4rem 0.5rem;
   font-weight: 700;
 }
@@ -332,7 +330,7 @@ li {
 .top__catch-down {
   font-size: 2.4rem;
   font-weight: 700;
-  padding: 0 0 0 1.5rem;
+  padding: 0 0 0 1.8rem;
 }
 @media screen and (min-width: 768px) {
   .top__catch-down {
@@ -374,9 +372,9 @@ li {
   font-size: 1rem;
   letter-spacing: -0.09rem;
   font-family: "Outfit";
-  padding: 0.6rem 0 2.2rem;
+  padding: 0.7rem 0 2.3rem;
   text-align: end;
-  margin-right: 2.8rem;
+  margin-right: 2.6rem;
 }
 @media screen and (min-width: 768px) {
   .top p {
@@ -395,12 +393,18 @@ li {
 }
 .top ul {
   margin: 0 auto;
+  padding-left: 0.5rem;
+}
+@media screen and (min-width: 768px) {
+  .top ul {
+    padding-left: 0;
+  }
 }
 .top li {
   font-size: 1.8rem;
   border: 0.1rem solid #fff;
-  margin: 0 auto 1.2rem;
-  padding: 0.6rem 0.8rem;
+  margin: 0 auto 1.3rem;
+  padding: 0.5rem 0.8rem 0.6rem;
   width: 13.3rem;
 }
 @media screen and (min-width: 768px) {
@@ -435,12 +439,28 @@ li {
     padding: 4.2rem 2rem 2.5rem;
   }
 }
+.give .no-pc {
+  display: inline-block;
+}
+@media screen and (min-width: 768px) {
+  .give .no-pc {
+    display: none;
+  }
+}
+.give .no-sp {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .give .no-sp {
+    display: inline-block;
+  }
+}
 .give__catch {
   position: relative;
   text-align: center;
   font-size: 2.1rem;
   color: #fa7da3;
-  padding: 0 0 1.6rem 0;
+  padding: 0 0 1.6rem 0.2rem;
 }
 @media screen and (min-width: 768px) {
   .give__catch {
@@ -537,6 +557,7 @@ li {
   font-size: 1rem;
   padding: 1rem 0.3rem 0 0;
   text-align: center;
+  letter-spacing: -0.02rem;
 }
 @media screen and (min-width: 768px) {
   .give p {
@@ -571,7 +592,7 @@ li {
 }
 @media screen and (min-width: 768px) {
   .contact_03 {
-    padding: 5.8rem 2rem 4rem;
+    padding: 5.6rem 2rem 6.3rem;
   }
 }
 .contact__container {
@@ -653,7 +674,7 @@ li {
 /* free
 ---------------------------------------- */
 .free {
-  padding: 0.9rem 2rem 2.2rem;
+  padding: 0.9rem 2rem 3.8rem;
 }
 @media screen and (min-width: 768px) {
   .free {
@@ -707,7 +728,6 @@ li {
 }
 .free__small {
   font-size: 80%;
-  letter-spacing: 0.03rem;
 }
 @media screen and (min-width: 768px) {
   .free__small {
@@ -1026,11 +1046,11 @@ li {
 }
 .point__item--detail_02 {
   flex-wrap: wrap;
-  margin: 1rem 0 0;
-  justify-content: center;
+  margin: 1.2rem 0 0;
+  justify-content: space-around;
   row-gap: 1.9rem;
   column-gap: 1.1rem;
-  max-width: 40rem;
+  max-width: 33rem;
 }
 @media screen and (min-width: 768px) {
   .point__item--detail_02 {
@@ -1038,7 +1058,12 @@ li {
     margin: 1rem 0 0;
     row-gap: 1.5rem;
     max-width: unset;
+    justify-content: center;
   }
+}
+.point__second--boxes {
+  flex: 1 1 calc(33.33% - 1rem);
+  max-width: 10rem;
 }
 @media screen and (min-width: 768px) {
   .point__second-pic {
@@ -1054,6 +1079,12 @@ li {
   .point__second-pic img {
     width: 100%;
   }
+}
+.point__second-pic_02 {
+  width: 100%;
+}
+.point__second-pic_02 img {
+  width: 100%;
 }
 .point__second-pic-sp {
   padding: 0 0.6rem 0 0.9rem;
@@ -1071,6 +1102,9 @@ li {
     font-size: 1.4rem;
     padding: 0.6rem 0 0;
   }
+}
+.point__second--name_06 {
+  letter-spacing: -0.01rem;
 }
 .point__item--info_03 {
   padding: 1.7rem 1.9rem 1.8rem 2rem;
@@ -1188,6 +1222,12 @@ li {
 }
 .course__item:nth-child(2) {
   width: 35rem;
+  margin: 0 0 0.1rem 0;
+}
+@media screen and (min-width: 768px) {
+  .course__item:nth-child(2) {
+    margin: unset;
+  }
 }
 .course__item--title {
   border-radius: 1rem 1rem 0 0;
@@ -1197,7 +1237,7 @@ li {
   border-left: 0.1rem solid #fa7da3;
   font-size: 1.8rem;
   color: #fa7da3;
-  padding: 1.2rem 0 1.3rem;
+  padding: 1.1rem 0 1.2rem;
   display: flex;
   justify-content: center;
 }
@@ -1213,7 +1253,7 @@ li {
   border-bottom: 0.1rem solid #fa7da3;
   border-right: 0.1rem solid #fa7da3;
   border-left: 0.1rem solid #fa7da3;
-  padding: 1.2rem 1.8rem 2.6rem 2rem;
+  padding: 1.4rem 1.8rem 2.6rem 2rem;
   letter-spacing: 0.01rem;
 }
 @media screen and (min-width: 768px) {
@@ -1228,7 +1268,12 @@ li {
   }
 }
 .course .no-sp {
-  display: unset;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .course .no-sp {
+    display: unset;
+  }
 }
 .course__info--catch {
   font-size: 1.4rem;
@@ -1239,6 +1284,7 @@ li {
 @media screen and (min-width: 768px) {
   .course__info--catch {
     font-size: 1.8rem;
+    line-height: 1.6;
   }
 }
 .course__pic {
@@ -1250,6 +1296,9 @@ li {
     margin: 0 auto;
   }
 }
+.course__pic img {
+  width: 100%;
+}
 
 /* voice
 ---------------------------------------- */
@@ -1259,7 +1308,7 @@ li {
 }
 @media screen and (min-width: 768px) {
   .voice {
-    padding: 0.5rem 0 0.5rem;
+    padding: 0.5rem 0 2.4rem;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1338,7 +1387,7 @@ li {
   background-color: #fa7da3;
   font-size: 1.8rem;
   color: #fff;
-  padding: 1.3rem 0 1.2rem;
+  padding: 1.1rem 0 1.2rem;
   display: flex;
   justify-content: center;
 }
@@ -1353,7 +1402,7 @@ li {
   padding: 1.3rem 1.2rem 1.1rem 1.4rem;
   border: 0.1rem solid #fa7da3;
   border-radius: 0 0 1rem 1rem;
-  gap: 1rem;
+  gap: 0.6rem;
 }
 @media screen and (min-width: 768px) {
   .voice__down {
@@ -1384,6 +1433,12 @@ li {
 @media screen and (min-width: 768px) {
   .voice__img {
     width: 31rem;
+    height: 11.6rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .voice__img img {
+    height: 100%;
   }
 }
 .voice .swiper__container {
@@ -1395,7 +1450,7 @@ li {
   .voice .swiper__container {
     max-width: 103rem;
     margin-inline: auto;
-    padding: 0 0 5rem 0;
+    padding: 0 0 2rem 0;
   }
 }
 .voice .swiper {
@@ -1415,7 +1470,7 @@ li {
 .voice__name {
   font-size: 1.6rem;
   color: #fa7da3;
-  padding: 0.4rem 0 0.7rem;
+  padding: 0.5rem 0 0.7rem;
   letter-spacing: 0.03rem;
 }
 @media screen and (min-width: 768px) {
@@ -1481,7 +1536,7 @@ li {
 }
 @media screen and (min-width: 768px) {
   .footer {
-    padding: 3.6rem 1.6rem 4.1rem;
+    padding: 2.8rem 1.6rem 2.8rem;
   }
 }
 .footer__img {
