--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -252,12 +252,10 @@ li {
     min-height: 31.1rem;
     background-color: #fa7da3;
     color: #fff;
-    display: flex;
     margin-top: 6.2rem;
     height: 31.1rem;
 
     @include pc {
-        height: auto;
         width: 100%;
         min-height: 61.2rem;
         margin-top: 9.5rem;
@@ -268,7 +266,7 @@ li {
         background-size: 21rem 21.5rem;
         background-position: 2% 100%;
         display: flex;
-        gap: 2rem;
+        height: 100%;
 
         @include pc {
             background-image: url("/assets/image/top_woman.png");
@@ -297,7 +295,7 @@ li {
             padding: 0.8rem 1.8rem 0 1.6rem;
         }
         &-sp {
-            margin: 1.9rem 0 0 1.8rem;
+            margin: 2.1rem 0 0 0.1rem;
             min-width: 16.6rem;
 
             @include pc {
@@ -331,7 +329,7 @@ li {
         font-size: 1.3rem;
         color: #fa7da3;
         background-color: #fff;
-        margin: 2.2rem 1rem 0.6rem 2.5rem;
+        margin: 2.3rem 1rem 0.6rem 2.6rem;
         padding: 0.4rem 0.5rem;
         font-weight: 700;
 
@@ -344,7 +342,7 @@ li {
     &__catch-down {
         font-size: 2.4rem;
         font-weight: 700;
-        padding: 0 0 0 1.5rem;
+        padding: 0 0 0 1.8rem;
 
         @include pc {
             font-size: 5.4rem;
@@ -382,9 +380,9 @@ li {
         font-size: 1rem;
         letter-spacing: -0.09rem;
         font-family: "Outfit";
-        padding: 0.6rem 0 2.2rem;
+        padding: 0.7rem 0 2.3rem;
         text-align: end;
-        margin-right: 2.8rem;
+        margin-right: 2.6rem;
 
         @include pc {
             font-size: 1.6rem;
@@ -401,12 +399,17 @@ li {
     }
     ul {
         margin: 0 auto;
+        padding-left: 0.5rem;
+
+        @include pc {
+            padding-left: 0;
+        }
     }
     li {
         font-size: 1.8rem;
         border: 0.1rem solid #fff;
-        margin: 0 auto 1.2rem;
-        padding: 0.6rem 0.8rem;
+        margin: 0 auto 1.3rem;
+        padding: 0.5rem 0.8rem 0.6rem;
         width: 13.3rem;
 
         @include pc {
@@ -441,12 +444,26 @@ li {
         padding: 4.2rem 2rem 2.5rem;
     }
 
+    .no-pc {
+        display: inline-block;
+
+        @include pc {
+            display: none;
+        }
+    }
+    .no-sp {
+        display: none;
+
+        @include pc {
+            display: inline-block;
+        }
+    }
     &__catch {
         position: relative;
         text-align: center;
         font-size: 2.1rem;
         color: #fa7da3;
-        padding: 0 0 1.6rem 0;
+        padding: 0 0 1.6rem 0.2rem;
 
         @include pc {
             padding: 0 0 1.9rem 1rem;
@@ -537,6 +554,7 @@ li {
         font-size: 1rem;
         padding: 1rem 0.3rem 0 0;
         text-align: center;
+        letter-spacing: -0.02rem;
 
         @include pc {
             font-size: 1.4rem;
@@ -568,7 +586,7 @@ li {
         padding: 2.9rem 2rem 4.4rem;
 
         @include pc {
-            padding: 5.8rem 2rem 4rem;
+            padding: 5.6rem 2rem 6.3rem;
         }
     }
     &__container {
@@ -654,7 +672,7 @@ li {
 /* free
 ---------------------------------------- */
 .free {
-    padding: 0.9rem 2rem 2.2rem;
+    padding: 0.9rem 2rem 3.8rem;
 
     @include pc {
         max-width: 61rem;
@@ -706,7 +724,6 @@ li {
     }
     &__small {
         font-size: 80%;
-        letter-spacing: 0.03rem;
 
         @include pc {
             font-size: 75%;
@@ -1006,18 +1023,23 @@ li {
   }
     &__item--detail_02 {
         flex-wrap: wrap;
-        margin: 1rem 0 0;
-        justify-content: center;
+        margin: 1.2rem 0 0;
+        justify-content: space-around;
         row-gap: 1.9rem;
         column-gap: 1.1rem;
-        max-width: 40rem;
+        max-width: 33rem;
 
         @include pc {
             flex-wrap: unset;
             margin: 1rem 0 0;
             row-gap: 1.5rem;
             max-width: unset;
+            justify-content: center;
         }
+    }
+    &__second--boxes {
+        flex: 1 1 calc(33.33% - 1rem);
+        max-width: 10rem;
     }
     &__second-pic {
         @include pc {
@@ -1031,6 +1053,13 @@ li {
             @include pc {
                 width: 100%;
             }
+        }
+    }
+    &__second-pic_02 {
+        width: 100%;
+
+        img {
+            width: 100%;
         }
     }
     &__second-pic-sp {
@@ -1047,6 +1076,9 @@ li {
         @include pc {
             font-size: 1.4rem;
             padding: 0.6rem 0 0;
+        }
+        &_06 {
+            letter-spacing: -0.01rem;
         }
     }
 
@@ -1166,8 +1198,12 @@ li {
         }
 
         &:nth-child(2) {
-
             width: 35rem;
+            margin: 0 0 0.1rem 0;
+
+            @include pc {
+                margin: unset;
+            }
         }
 
         &--title {
@@ -1178,7 +1214,7 @@ li {
             border-left: 0.1rem solid #fa7da3;
             font-size: 1.8rem;
             color: #fa7da3;
-            padding: 1.2rem 0 1.3rem;
+            padding: 1.1rem 0 1.2rem;
             display: flex;
             justify-content: center;
 
@@ -1193,7 +1229,7 @@ li {
             border-bottom: 0.1rem solid #fa7da3;
             border-right: 0.1rem solid #fa7da3;
             border-left: 0.1rem solid #fa7da3;
-            padding: 1.2rem 1.8rem 2.6rem 2rem;
+            padding: 1.4rem 1.8rem 2.6rem 2rem;
             letter-spacing: 0.01rem;
 
             @include pc {
@@ -1208,20 +1244,21 @@ li {
         }
     }
     .no-sp {
-        display: unset;
+        display: none;
 
         @include pc {
-
+            display: unset;
         }
     }
     &__info--catch {
         font-size: 1.4rem;
-        line-height: calc(21 / 14);
+        line-height: 1.5;
         text-align: left;
         padding: 0 0 1.3rem 0;
 
         @include pc {
             font-size: 1.8rem;
+            line-height: 1.6;
         }
     }
     &__pic {
@@ -1230,6 +1267,9 @@ li {
 
         @include pc {
             margin: 0 auto;
+        }
+        img {
+            width: 100%;
         }
     }
 }
@@ -1241,7 +1281,7 @@ li {
     padding: 1rem 0 0.5rem;
 
     @include pc {
-        padding: 0.5rem 0 0.5rem;
+        padding: 0.5rem 0 2.4rem;
     }
 
     &__content {
@@ -1316,7 +1356,7 @@ li {
         background-color: #fa7da3;
         font-size: 1.8rem;
         color: #fff;
-        padding: 1.3rem 0 1.2rem;
+        padding: 1.1rem 0 1.2rem;
         display: flex;
         justify-content: center;
 
@@ -1330,7 +1370,7 @@ li {
         padding: 1.3rem 1.2rem 1.1rem 1.4rem;
         border: 0.1rem solid #fa7da3;
         border-radius: 0 0 1rem 1rem;
-        gap: 1rem;
+        gap: 0.6rem;
 
         @include pc {
             padding: 1.3rem 2.2rem 1.3rem 2.4rem;
@@ -1359,6 +1399,12 @@ li {
 
         @include pc {
             width: 31rem;
+            height: 11.6rem;
+        }
+        img {
+            @include pc {
+                height: 100%;
+            }
         }
     }
     .swiper__container {
@@ -1369,7 +1415,7 @@ li {
         @include pc {
             max-width: 103rem;
             margin-inline: auto;
-            padding: 0 0 5rem 0;
+            padding: 0 0 2rem 0;
         }
     }
     .swiper {
@@ -1393,7 +1439,7 @@ li {
     &__name {
         font-size: 1.6rem;
         color: #fa7da3;
-        padding: 0.4rem 0 0.7rem;
+        padding: 0.5rem 0 0.7rem;
         letter-spacing: 0.03rem;
 
         @include pc {
@@ -1458,7 +1504,7 @@ li {
     padding: 1.3rem 0 2.1rem;
 
     @include pc {
-        padding: 3.6rem 1.6rem 4.1rem;
+        padding: 2.8rem 1.6rem 2.8rem;
 
     }
     &__img {
